# libvoicetts

./: .gitignore  CMakeLists.txt  README.md  gen_mk.py
.github/workflows/: build.yml
jni/: Android.mk  Application.mk  config.h  voicetts.cpp
lua/: voicetts.lua
